--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "3box-profile-edit-react",
-  "version": "0.0.1-beta.6",
+  "version": "0.0.2",
   "description": "A drop in component for editing 3Box profiles.",
-  "main": "./dist/index.js",
+  "main": "./lib/index.js",
   "author": "3box.io",
   "license": "MIT",
   "contributors": [
@@ -16,6 +16,7 @@
   ],
   "scripts": {
     "build": "webpack --config webpack.config.babel.js",
+    "build:es5": "rm -rf ./lib; ./node_modules/.bin/babel src --out-dir lib --source-maps inline --copy-files --ignore=src/__tests__/,src/__mocks__/",
     "build-examples": "webpack --config examples/webpack.config.babel.js --progress",
     "clean": "rm -rf dist coverage",
     "coverage": "jest --coverage",
@@ -25,6 +26,7 @@
     "test": "npm run lint && npm run coverage"
   },
   "devDependencies": {
+    "@babel/cli": "^7.7.7",
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.1.0",
@@ -67,6 +69,7 @@
     "babel-core": "7.0.0-bridge.0"
   },
   "dependencies": {
+    "3box": "^1.15.0",
     "3id-resolver": "0.0.6",
     "@babel/runtime": "^7.6.0",
     "async": "^3.1.0",
