--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3box-profile-edit-react",
-  "version": "0.0.2.1",
+  "version": "0.0.6",
   "description": "A drop in component for editing 3Box profiles.",
   "main": "./lib/index.js",
   "author": "3box.io",
@@ -45,13 +45,11 @@
     "eslint-plugin-react": "^7.4.0",
     "file-loader": "^4.2.0",
     "jest-cli": "^23.6.0",
-    "node-sass": "^4.7.2",
     "prop-types": "^15.6.0",
     "react": "^16.6.0",
     "react-addons-test-utils": "^15.5.1",
     "react-dom": "^16.6.0",
     "react-hot-loader": "next",
-    "react-inlinesvg": "^1.1.6",
     "react-test-renderer": "^16.0.0",
     "regenerator-runtime": "^0.12.1",
     "sass-loader": "^7.0.1",
@@ -77,8 +75,11 @@
     "emoji-js": "^3.4.1",
     "emoji-mart": "^2.11.1",
     "ethereum-blockies-base64": "^1.0.2",
+    "multicodec": "^0.5.6",
+    "node-sass": "^4.13.0",
     "orbit-db": "^0.21.4",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-inlinesvg": "^1.2.0",
     "svg-inline-loader": "^0.8.0"
   }
 }
